<!--
  ~ Copyright 2019 Stéphane Baiget
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<resources>

    <!-- Application -->
    <string name="app_name" translatable="false">Score It</string>
    <string name="app_name_subtitle">Score keeper</string>

    <!-- Activity and toolbar titles -->
    <string name="title_activity_saved_games">Saved games</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_preferences">Preferences</string>
    <string name="title_game_universal">Universal</string>
    <string name="title_game_tarot">Tarot</string>
    <string name="title_game_belote">Belote</string>
    <string name="title_game_coinche">Coinche</string>

    <!-- Navigation drawer -->
    <string name="drawer_game_universal">Universal</string>
    <string name="drawer_game_tarot">Tarot</string>
    <string name="drawer_game_belote">Belote</string>
    <string name="drawer_game_coinche">Coinche</string>
    <string name="drawer_thank">Thank</string>
    <string name="drawer_about">About</string>
    <string name="drawer_preferences">Preferences</string>

    <!-- Belote -->
    <string name="belote_header_scorer">Scorer</string>
    <string name="belote_button_score">Score</string>
    <string name="belote_button_capot">Capot</string>
    <string name="belote_header_points">Points</string>
    <string name="belote_header_bonuses">Bonus</string>
    <string name="belote_header_announces">Announces</string>
    <string name="belote_bonus_belote">Belote</string>
    <string name="belote_bonus_run_3">Run of 3 cards</string>
    <string name="belote_bonus_run_4">Run of 4 cards</string>
    <string name="belote_bonus_run_5">Run of 5 cards</string>
    <string name="belote_bonus_normal_four">Four of a kind - King, Queen and 10</string>
    <string name="belote_bonus_nine_four">Four of a kind - 9</string>
    <string name="belote_bonus_jack_four">Four of a kind - Jack</string>

    <!-- Coinche -->
    <string name="coinche_header_bid">Bid</string>
    <string name="coinche_header_coinche">Coinche</string>
    <string name="coinche_header_points">Points</string>
    <string name="coinche_header_bonuses">Bonuses</string>
    <string name="coinche_header_announces">Announces</string>
    <string name="coinche_coinche_none">None</string>
    <string name="coinche_coinche_coinche">Coinche</string>
    <string name="coinche_coinche_surcoinche">Sur-coinche</string>
    <string name="coinche_first_team_default_name">Them</string>
    <string name="coinche_second_team_default_name">Us</string>
    <string name="coinche_bonus_belote">Belote</string>
    <string name="coinche_bonus_run_3">Run of 3 cards</string>
    <string name="coinche_bonus_run_4">Run of 4 cards</string>
    <string name="coinche_bonus_run_5">Run of 5 cards</string>
    <string name="coinche_bonus_normal_four">Four of a kind - King, Queen and 10</string>
    <string name="coinche_bonus_nine_four">Four of a kind - 9</string>
    <string name="coinche_bonus_jack_four">Four of a kind - Jack</string>

    <!-- Tarot -->
    <string name="tarot_header_scorer">Taker</string>
    <string name="tarot_header_player">Player</string>
    <string name="tarot_header_partner">Partner</string>
    <string name="tarot_header_bid">Bid</string>
    <string name="tarot_header_oudlers">Oudlers</string>
    <string name="tarot_header_points">Points</string>
    <string name="tarot_header_bonuses">Bonuses</string>
    <string name="tarot_oudler_excuse">Excuse</string>
    <string name="tarot_oudler_petit">Petit</string>
    <string name="tarot_oudler_twentyone">21</string>
    <string name="tarot_bid_take">Take</string>
    <string name="tarot_bid_guard">Guard</string>
    <string name="tarot_bid_guard_without_kitty">Guard without the kitty</string>
    <string name="tarot_bid_guard_against_kitty">Guard against the kitty</string>
    <string name="tarot_bonus_simple_poignee">Simple poignée</string>
    <string name="tarot_bonus_double_poignee">Double poignée</string>
    <string name="tarot_bonus_triple_poignee">Triple poignée</string>
    <string name="tarot_bonus_petit_au_bout">Petit au bout</string>
    <string name="tarot_bonus_slam_not_announced">Slam not announced</string>
    <string name="tarot_bonus_slam_announced_not_done">Slam announced - Not done</string>
    <string name="tarot_bonus_slam_announced_done">Slam announced - Done</string>

    <!-- Universal -->
    <string name="universal_total_points">Total</string>

    <!-- Dialog -->
    <string name="dialog_title_current_game">Current game</string>
    <string name="dialog_title_filename">Filename</string>
    <string name="dialog_title_player_number">Number of players</string>
    <string name="dialog_title_edit_name">Edit name</string>
    <string name="dialog_action_game_discard">Discard</string>
    <string name="dialog_action_game_reset">Reset scores</string>
    <string name="dialog_action_game_create">Save and create</string>
    <string name="dialog_action_game_load">Save and load</string>
    <string name="dialog_action_enter_name">Enter name</string>
    <string name="dialog_action_pick_contact">Pick contact</string>

    <!-- Snackbar -->
    <string name="snackbar_msg_on_lap_deleted">Lap deleted</string>
    <string name="snackbar_action_on_lap_deleted">Undo</string>

    <!-- Button -->
    <string name="button_action_cancel">Cancel</string>
    <string name="button_action_add">Add</string>
    <string name="button_action_ok">OK</string>
    <string name="button_help_translate">Help to translate</string>
    <string name="button_contact_developer">Contact developer</string>
    <string name="button_rate_app">Rate this application</string>
    <string name="button_share_app">Share this application</string>
    <string name="button_join_community">Google+ community</string>
    <string name="button_donate_coffee">Buy me a coffee</string>
    <string name="button_donate_coffee_donated">You bought me a coffee. Thanks!</string>
    <string name="button_donate_beer">Buy me a beer</string>
    <string name="button_donate_beer_donated">You bought me a beer. Thanks!</string>

    <!-- Menu -->
    <string name="menu_action_clear">Clear</string>
    <string name="menu_action_actual_scores">Actual scores</string>
    <string name="menu_action_show_chart">Show chart</string>
    <string name="menu_action_hide_totals">Hide totals</string>

    <!-- Prefs -->
    <string name="prefs_select_theme_mode">Select theme</string>
    <string name="menu_action_round_scores">Round scores</string>
    <string name="menu_action_show_totals">Show totals</string>

    <!-- Content descriptions -->
    <string name="content_description_delete">Delete</string>
    <string name="content_description_edit">Edit</string>

    <!-- Tabs -->
    <string name="tab_title_application">App</string>
    <string name="tab_title_translations">Translations</string>

    <!-- Languages -->
    <string name="language_english">English</string>
    <string name="language_french">French</string>
    <string name="language_dutch">Dutch</string>
    <string name="language_russian">Russian</string>
    <string name="language_german">German</string>
    <string name="language_spanish">Spanish</string>
    <string name="language_italian">Italian</string>
    <string name="language_arabic">Arabic</string>
</resources>