<!--
  ~ Copyright 2020 Stéphane Baiget
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <com.google.android.material.appbar.AppBarLayout
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/themeMode"
                style="?textAppearanceBody2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_padding_size_small"
                android:background="?selectableItemBackground"
                android:paddingStart="@dimen/margin_padding_size_large"
                android:paddingTop="@dimen/margin_padding_size_medium"
                android:paddingEnd="@dimen/margin_padding_size_large"
                android:paddingBottom="@dimen/margin_padding_size_medium"
                android:text="@string/prefs_select_theme_mode"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/titleUniversal"
                style="?textAppearanceOverline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:text="@string/title_game_universal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/themeMode"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/showTotal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_padding_size_large"
                android:paddingEnd="@dimen/margin_padding_size_medium"
                android:text="@string/menu_action_show_totals"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleUniversal"
                />

            <TextView
                android:id="@+id/titleBelote"
                style="?textAppearanceOverline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:text="@string/title_game_belote"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/showTotal"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/roundBelote"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_padding_size_large"
                android:paddingEnd="@dimen/margin_padding_size_medium"
                android:text="@string/menu_action_round_scores"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleBelote"
                />

            <TextView
                android:id="@+id/titleCoinche"
                style="?textAppearanceOverline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_padding_size_medium"
                android:layout_marginTop="@dimen/margin_padding_size_medium"
                android:text="@string/title_game_coinche"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/roundBelote"
                />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/roundCoinche"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/margin_padding_size_large"
                android:paddingEnd="@dimen/margin_padding_size_medium"
                android:text="@string/menu_action_round_scores"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/titleCoinche"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</LinearLayout>